crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__no_lines_before.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    name: UnsortedImports
    body: Import block is un-sorted or un-formatted
    suggestion: Organize imports
    fixable: true
  location:
    row: 1
    column: 0
  end_location:
    row: 10
    column: 0
  fix:
    edits:
      - location:
          row: 1
          column: 0
        end_location:
          row: 10
          column: 0
        content: "from __future__ import annotations\n\nfrom typing import Any\n\nfrom my_first_party import my_first_party_object\nfrom requests import Session\n\nfrom . import my_local_folder_object\n"
  parent: ~

