crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__no_lines_before_with_empty_sections.py_no_lines_before_with_empty_sections.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    name: UnsortedImports
    body: Import block is un-sorted or un-formatted
    suggestion: Organize imports
    fixable: true
  location:
    row: 1
    column: 0
  end_location:
    row: 4
    column: 0
  fix:
    edits:
      - location:
          row: 1
          column: 0
        end_location:
          row: 4
          column: 0
        content: "from __future__ import annotations\nfrom typing import Any\n\nfrom . import my_local_folder_object\n"
  parent: ~

