crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__no_wrap_star.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    name: UnsortedImports
    body: Import block is un-sorted or un-formatted
    commit: Organize imports
    fixable: true
  location:
    row: 1
    column: 0
  end_location:
    row: 2
    column: 0
  fix:
    content: "from .subscription import *  # type: ignore  # some very long comment explaining why this needs a type ignore\n"
    location:
      row: 1
      column: 0
    end_location:
      row: 2
      column: 0
  parent: ~

